- [x]  Fix nav links - [x]  Add ternary if statement to control Log in vs log out - [x]  Add logic so the log in component will pop out over top of whatever page you are on - [x]  set opacity layer underneath component - [x]  set up click handlers to create a boolean switch - [x]  Pass visibility handler to LogIn component for use with its clickable elements

--- a/src/components/headerNav/headerNav.scss
+++ b/src/components/headerNav/headerNav.scss
@@ -35,6 +35,17 @@ nav {
                 }
         }
     }
+
+    .login__background {
+        background-color: variables.$secondary-background-hover-color;
+        opacity: .8;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100rem;
+        position: absolute;
+    }
+
     @include tablet {
         height: 5.5rem;
 
